@startuml
'https://plantuml.com/class-diagram
!include style.puml

skinparam arrowThickness 1.1
skinparam arrowColor UI_COLOR_T4
skinparam classBackgroundColor UI_COLOR
skinparam classAttributeIconSize 0

package Command <<Rectangle>> {
    class "{abstract}\nCommand" as Command
    class AddCommand
    class RemoveCommand
    class SearchCommand
    class ListCommand
    class HelpCommand
    class ByeCommand
    class ExpiringCommand
    class ClearCommand
    class SetLimitCommand
    class RunningLowCommand
}

class Command {
  #fridge: Fridge
  #isExit: boolean
  +execute(): void{abstract}
  +setData(fridge: Fridge): void
}

class AddCommand {
  -foodToAdd: Food
  +execute(): void
  -addFood(): void
  -showResults(): void
  +getMessagePrintedToUser(): String
  +categoriseAndGenerateFood(): Food {static}
}

class ByeCommand {
  +isExit(): boolean
  +setExit(isExit: boolean): void
  +execute(): void
}

class ClearCommand {
  +execute(): void
}

class ExpiringCommand {
  -message: String
  -index: int
  +execute(): void
  +updateMessage(food: Food): void
  +addToMessage(food: Food): void
}

class HelpCommand {
  - COMMANDS: String {static}
  - CATEGORIES: String {static}
  - LOCATIONS: String {static}
  + execute() : void
}

class ListCommand {
  -description: String
  -indexShownToUser: int
  +execute(): void
  -listByCategory(): void
  -listByStorageLocation(): void
  -listAll(): void
}

class RemoveCommand {
  -foodNameToEdit: String
  -foodToBeRemoved: Food
  +execute(): void
  -removePortion(): void
  -checkRunningOUt(): void
}

class RunningLowCommand {
  +execute(): void
  +getMessage(): String
  -updateMessage(foodCategory: FoodCategory): void
}

class SearchCommand {
  -foodName: String
  +execute(): void
  -showResults(): void
  +getMessagePrintedToUser(): String
  -getIndexOfFoodStored(): int
}

class SetLimitCommand {
  -foodCategory: FoodCategory
  -quantity: int
  +execute(): void
  -getSetLimitMessage(): String
}

package Fridge <<Rectangle>>  {
}

package Main <<Rectangle>> {
}

package UI <<Rectangle>> {
}

RemoveCommand --up|> Command
SearchCommand --up|> Command
ExpiringCommand --up|> Command
AddCommand --up|> Command
ListCommand --right|> Command
HelpCommand --left|> Command
ByeCommand --|> Command
ClearCommand --|> Command
RunningLowCommand --|> Command
SetLimitCommand --|> Command
Command ---.down> Fridge: uses
Command -.> UI: prints with
Main -.down> Command: execute >

@enduml